handle other fields in create
